Fixed Navbar Spacing on Resize

--- a/index.css
+++ b/index.css
@@ -182,6 +182,7 @@ i{
 	left: 50%;
     transform: translate(-50%, 0);
     z-index: 10;
+    width: 520px;
 }
 
 #navbar *{
@@ -191,7 +192,7 @@ i{
 #navbar-items{
 	padding-left: 0;
 	margin: 20px auto;
-	font-size: 20px;
+	font-size: 18px;
 }
 
 #banner{
